Implement the OCC/rich-conflict pass
